// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStyleApplicator works correctly for no props 1`] = `
<DocumentFragment>
  .css-19gnnpj {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-19gnnpj"
  />
</DocumentFragment>
`;

exports[`createStyleApplicator works correctly for props and viewport 1`] = `
<DocumentFragment>
  .css-1nc8hru {
  color: #ff0000;
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1nc8hru"
  />
  .css-1nc8hru {
  color: #ff0000;
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1nc8hru"
  />
</DocumentFragment>
`;

exports[`createStyleApplicator works correctly for props and viewport 2`] = `
<DocumentFragment>
  .css-1nc8hru {
  color: #ff0000;
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1nc8hru"
  />
  .css-pk4fcu {
  color: #000000;
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-pk4fcu"
  />
</DocumentFragment>
`;
